# TestCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/dlOpen/: Base.hpp  CMakeLists.txt  Drived1.cpp  Drived1.hpp  Drived2.cpp  Drived2.hpp  main.cpp
src/jsonWrapper/: CMakeLists.txt  JsonWrapper.hpp  main.cpp
